http://shinydemos.com/clock/ doesn't seem to work https://bugs.webkit.org/show_bug.cgi?id=79682

Reviewed by Nikolas Zimmermann.

Source/WebCore:

Test: svg/repaint/text-mask-update.svg

Currently, parent resources are not invalidated when SVGInlineText nodes
are added or removed. Adjusting SVGResourcesCache::clientWasAddedToTree()
and SVGResourcesCache::clientWillBeRemovedFromTree() to cover this case.

* rendering/svg/SVGResourcesCache.cpp:
(WebCore::SVGResourcesCache::clientWasAddedToTree):
(WebCore::SVGResourcesCache::clientWillBeRemovedFromTree):

LayoutTests:

* platform/chromium-linux/svg/repaint/text-mask-update-expected.png: Added.
* platform/chromium-linux/svg/repaint/text-mask-update-expected.txt: Added.
* platform/chromium/test_expectations.txt:
* platform/mac/test_expectations.txt:
* svg/repaint/text-mask-update.svg: Added.


Canonical link: https://commits.webkit.org/105920@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119241 268f45cc-cd09-0410-ab3c-d52691b4dbfc